# void-walker

./: .env.example  .gitignore  Dockerfile.dashboard  Dockerfile.db  Dockerfile.walker  LICENSE  README.md  _config.yml  compose.yaml  config.yaml  demo.ipynb  main.py  makefile  pyproject.toml  session_example.md  test.ipynb
configs/: config.yaml  lessons_config.yaml  persona_config.yaml
dashboard/: app.py  db.py  styles.py
dashboard/assets/: custom.css
dashboard/components/: functions.py  session_download.py
dashboard/pages/: monitor.py  mood.py  overview.py  persona.py  personas.py  raw_tables.py  session-view.py  session.py  story.py
dashboard/utils/: observer_utils.py  story.css  story_pdf.html  story_utils.py  translation_utils.py
docs/: _config.yml  graph.mermaid  persona_config.yaml  persona_prompt.jinja2  report.md  roadmap.md  state.md
docs/_data/: navigation.yml
scr/: db_queries.py  db_schemas.py  llm_functions.py  logging_db.py  models.py  selenium_functions.py  setup.py
src/: models.py  setup.py
src/db/: db.py  db_writer.py  queries.py  utils.py
src/db/sql/: 01_create_session.sql  02_create_actions.sql  03_create_feedback.sql  04_create_invites.sql  05_create_messages.sql  06_create_personas.sql  07_create_reflections.sql  08_create_indexes.sql  actions_sequence_per_session.sql  cron.sql  drop_tables.sql  feedback_per_session.sql  invites_per_session.sql  messages_per_session.sql  mood_timeline_per_session.sql  tool_usage_per_session.sql  (+1 more)
src/selenium/: helpers.py  utils.py
src/walker/: persona.py  run.py  tools.py  utils.py  walker.py
