[project]
name = "void-walker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.2.17",
    "langchain-groq>=1.1.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.1",
    "names-dataset>=3.3.1",
    "selenium>=4.43.0",
    "webdriver-manager>=4.0.2",
]
